// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HomePage /> should render and match the snapshot for tab 0 1`] = `
<div>
  <div
    class="root MuiTabs-root styledComponents__StyledTabs-sc-16g4axo-1 gllqKx css-1ujnqem-MuiTabs-root"
    id="test-tabs"
  >
    <div
      class="MuiTabs-scroller MuiTabs-fixed css-jpln7h-MuiTabs-scroller"
      style="overflow: hidden; margin-bottom: 0px;"
    >
      <div
        class="flexContainer MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="MuiButtonBase-root root MuiTab-root MuiTab-textColorPrimary MuiTab-fullWidth Mui-selected styledComponents__StyledTab-sc-16g4axo-0 iqlSvE css-1ujykiq-MuiButtonBase-root-MuiTab-root"
          data-testid="0"
          id="test-tabs-tab-0"
          role="tab"
          tabindex="0"
          type="button"
        >
          Delivery
          <span
            class="indicator MuiTabs-indicator css-1aquho2-MuiTabs-indicator"
          />
        </button>
        <button
          aria-selected="false"
          class="MuiButtonBase-root root MuiTab-root MuiTab-textColorPrimary MuiTab-fullWidth styledComponents__StyledTab-sc-16g4axo-0 gcizIM css-1ujykiq-MuiButtonBase-root-MuiTab-root"
          data-testid="1"
          id="test-tabs-tab-1"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Click & Collect
        </button>
      </div>
    </div>
  </div>
  <div
    class="swiper"
  >
    <div
      style="overflow-x: hidden; flex: 1; flex-direction: flex; height: 100%;"
    >
      <div
        class="react-swipeable-view-container"
        style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
      >
        <div
          aria-hidden="false"
          data-swipeable="true"
          style="width: 100%; flex-shrink: 0; overflow: auto;"
        >
          <div>
            <img
              alt="San Francisco – Oakland Bay Bridge, United States"
              class="MuiBox-root css-ijk13v"
              src="https://images.unsplash.com/photo-1537944434965-cf4679d1a598?auto=format&fit=crop&w=400&h=250&q=60"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiMobileStepper-root MuiMobileStepper-positionStatic css-rh92k-MuiPaper-root-MuiMobileStepper-root"
    >
      <button
        class="root StyledButton-sc-1apep4b-0 bXswYh MuiButton-root text MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root Mui-disabled  css-1e6y48t-MuiButtonBase-root-MuiButton-root"
        data-testid="back-btn"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          style="visibility: visible;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ArrowBackIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
            />
          </svg>
        </div>
      </button>
      <div
        class="MuiMobileStepper-dots css-1384nzf-MuiMobileStepper-dots"
      >
        <div
          class="MuiMobileStepper-dot MuiMobileStepper-dotActive css-26w9jf-MuiMobileStepper-dot"
        />
        <div
          class="MuiMobileStepper-dot css-114p2tk-MuiMobileStepper-dot"
        />
        <div
          class="MuiMobileStepper-dot css-114p2tk-MuiMobileStepper-dot"
        />
        <div
          class="MuiMobileStepper-dot css-114p2tk-MuiMobileStepper-dot"
        />
      </div>
      <button
        class="root StyledButton-sc-1apep4b-0 bXswYh MuiButton-root text MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root  css-1e6y48t-MuiButtonBase-root-MuiButton-root"
        data-testid="next-btn"
        tabindex="0"
        type="button"
      >
        <div
          style="visibility: visible;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ArrowForwardIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
  <div
    class="swiper"
  >
    <div
      style="overflow-x: hidden; flex: 1; flex-direction: flex; height: 100%;"
    >
      <div
        class="react-swipeable-view-container"
        style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
      >
        <div
          aria-hidden="false"
          data-swipeable="true"
          style="width: 100%; flex-shrink: 0; overflow: auto;"
        >
          <div>
            <img
              alt="San Francisco – Oakland Bay Bridge, United States"
              class="MuiBox-root css-ijk13v"
              src="https://images.unsplash.com/photo-1537944434965-cf4679d1a598?auto=format&fit=crop&w=400&h=250&q=60"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiMobileStepper-root MuiMobileStepper-positionStatic css-rh92k-MuiPaper-root-MuiMobileStepper-root"
    >
      <button
        class="root StyledButton-sc-1apep4b-0 bXswYh MuiButton-root text MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root Mui-disabled  css-1e6y48t-MuiButtonBase-root-MuiButton-root"
        data-testid="back-btn"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          style="visibility: visible;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ArrowBackIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
            />
          </svg>
        </div>
      </button>
      <div
        class="MuiMobileStepper-dots css-1384nzf-MuiMobileStepper-dots"
      >
        <div
          class="MuiMobileStepper-dot MuiMobileStepper-dotActive css-26w9jf-MuiMobileStepper-dot"
        />
        <div
          class="MuiMobileStepper-dot css-114p2tk-MuiMobileStepper-dot"
        />
        <div
          class="MuiMobileStepper-dot css-114p2tk-MuiMobileStepper-dot"
        />
        <div
          class="MuiMobileStepper-dot css-114p2tk-MuiMobileStepper-dot"
        />
      </div>
      <button
        class="root StyledButton-sc-1apep4b-0 bXswYh MuiButton-root text MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root  css-1e6y48t-MuiButtonBase-root-MuiButton-root"
        data-testid="next-btn"
        tabindex="0"
        type="button"
      >
        <div
          style="visibility: visible;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ArrowForwardIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
  <h1
    class="MuiTypography-root MuiTypography-h1 css-qu1isr-MuiTypography-root"
  >
    Large title
  </h1>
  <h2
    class="MuiTypography-root MuiTypography-h2 css-1jfg05l-MuiTypography-root"
  >
    Title #1
  </h2>
  <h3
    class="MuiTypography-root MuiTypography-h3 css-1ewfuka-MuiTypography-root"
  >
    Title #2
  </h3>
  <h4
    class="MuiTypography-root MuiTypography-h4 css-1b8g8n0-MuiTypography-root"
  >
    Title #3
  </h4>
  <h5
    class="MuiTypography-root MuiTypography-h5 css-11estw0-MuiTypography-root"
  >
    Headline
  </h5>
  <h6
    class="MuiTypography-root MuiTypography-h6 css-1t9yafy-MuiTypography-root"
  >
    Callout
  </h6>
  <p
    class="MuiTypography-root MuiTypography-body1 css-1reifv3-MuiTypography-root"
  >
    Subhead
  </p>
  <p
    class="MuiTypography-root MuiTypography-body2 css-ry76j1-MuiTypography-root"
  >
    Footnote
  </p>
  <span
    class="MuiTypography-root MuiTypography-caption css-1393mlh-MuiTypography-root"
  >
    Caption
  </span>
  <div
    class="StyledListItem-sc-17740x3-0 iGDsMW"
  >
    <div
      class="text-list-item-wrapper"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 text-list-item-left css-11estw0-MuiTypography-root"
      >
        Flat / Villa No.
      </h5>
      <div
        class="MuiFormControl-root MuiTextField-root list-item-input css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
      >
        <div
          class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1480iag-MuiInputBase-root-MuiInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
            placeholder="Required"
            type="text"
            value=""
          />
        </div>
      </div>
      <img
        alt="Required"
        src="IMAGE_MOCK"
      />
    </div>
  </div>
  <button
    class="root StyledButton-sc-1apep4b-0 fcMYug MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root  css-sghohy-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <div
      style="visibility: visible;"
    >
      button
    </div>
  </button>
  <legend
    class="MuiFormLabel-root MuiFormLabel-colorPrimary css-u4tvz2-MuiFormLabel-root"
  >
    Gender
  </legend>
  <div
    aria-label="Gender"
    class="MuiFormGroup-root MuiFormGroup-row css-qfz70r-MuiFormGroup-root"
    role="radiogroup"
  >
    <label
      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
    >
      <span
        class="MuiRadio-root MuiRadio-colorPrimary MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root css-vqmohf-MuiButtonBase-root-MuiRadio-root"
      >
        <input
          class="PrivateSwitchBase-input css-1m9pwf3"
          name="test"
          type="radio"
          value="boy"
        />
        <span
          class="css-hyxlzm"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1hbvpl3-MuiSvgIcon-root"
            data-testid="RadioButtonUncheckedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1hhw7if-MuiSvgIcon-root"
            data-testid="RadioButtonCheckedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
            />
          </svg>
        </span>
      </span>
      <span
        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-ahj2mt-MuiTypography-root"
      >
        Male
      </span>
    </label>
    <label
      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
    >
      <span
        class="MuiRadio-root MuiRadio-colorPrimary MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root css-vqmohf-MuiButtonBase-root-MuiRadio-root"
      >
        <input
          class="PrivateSwitchBase-input css-1m9pwf3"
          name="test"
          type="radio"
          value="girl"
        />
        <span
          class="css-hyxlzm"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1hbvpl3-MuiSvgIcon-root"
            data-testid="RadioButtonUncheckedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1hhw7if-MuiSvgIcon-root"
            data-testid="RadioButtonCheckedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
            />
          </svg>
        </span>
      </span>
      <span
        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-ahj2mt-MuiTypography-root"
      >
        Female
      </span>
    </label>
  </div>
  <label
    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
  >
    <span
      class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root css-12wnr2w-MuiButtonBase-root-MuiCheckbox-root"
    >
      <input
        class="PrivateSwitchBase-input css-1m9pwf3"
        data-indeterminate="false"
        type="checkbox"
        value="check"
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="CheckBoxOutlineBlankIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
    </span>
    <span
      class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-ahj2mt-MuiTypography-root"
    >
      test
    </span>
  </label>
  <div>
    <span
      class="MuiSwitch-root MuiSwitch-sizeMedium sc-bdVaJa fimhKu css-julti5-MuiSwitch-root"
    >
      <span
        class="MuiSwitch-switchBase MuiSwitch-colorPrimary MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root css-5ryogn-MuiButtonBase-root-MuiSwitch-switchBase"
        data-testid="toggle"
      >
        <input
          class="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
          type="checkbox"
        />
        <span
          class="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
        />
      </span>
      <span
        class="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
      />
    </span>
  </div>
  <br />
</div>
`;

exports[`<HomePage /> should render and match the snapshot for tab 1 1`] = `
<div>
  <div
    class="root MuiTabs-root styledComponents__StyledTabs-sc-16g4axo-1 gllqKx css-1ujnqem-MuiTabs-root"
    id="test-tabs"
  >
    <div
      class="MuiTabs-scroller MuiTabs-fixed css-jpln7h-MuiTabs-scroller"
      style="overflow: hidden; margin-bottom: 0px;"
    >
      <div
        class="flexContainer MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="MuiButtonBase-root root MuiTab-root MuiTab-textColorPrimary MuiTab-fullWidth Mui-selected styledComponents__StyledTab-sc-16g4axo-0 iqlSvE css-1ujykiq-MuiButtonBase-root-MuiTab-root"
          data-testid="0"
          id="test-tabs-tab-0"
          role="tab"
          tabindex="0"
          type="button"
        >
          Delivery
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            style="color: rgb(226, 95, 109);"
          />
        </button>
        <button
          aria-selected="false"
          class="MuiButtonBase-root root MuiTab-root MuiTab-textColorPrimary MuiTab-fullWidth styledComponents__StyledTab-sc-16g4axo-0 gcizIM css-1ujykiq-MuiButtonBase-root-MuiTab-root"
          data-testid="1"
          id="test-tabs-tab-1"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Click & Collect
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            style="color: rgb(226, 95, 109);"
          />
        </button>
      </div>
      <span
        class="indicator MuiTabs-indicator css-1aquho2-MuiTabs-indicator"
        style="left: 0px; width: 0px;"
      />
    </div>
  </div>
  <div
    class="swiper"
  >
    <div
      style="overflow-x: hidden; flex: 1; flex-direction: flex; height: 100%;"
    >
      <div
        class="react-swipeable-view-container"
        style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
      >
        <div
          aria-hidden="false"
          data-swipeable="true"
          style="width: 100%; flex-shrink: 0; overflow: auto;"
        >
          <div>
            <img
              alt="San Francisco – Oakland Bay Bridge, United States"
              class="MuiBox-root css-ijk13v"
              src="https://images.unsplash.com/photo-1537944434965-cf4679d1a598?auto=format&fit=crop&w=400&h=250&q=60"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiMobileStepper-root MuiMobileStepper-positionStatic css-rh92k-MuiPaper-root-MuiMobileStepper-root"
    >
      <button
        class="root StyledButton-sc-1apep4b-0 bXswYh MuiButton-root text MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root Mui-disabled  css-1e6y48t-MuiButtonBase-root-MuiButton-root"
        data-testid="back-btn"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          style="visibility: visible;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ArrowBackIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
            />
          </svg>
        </div>
      </button>
      <div
        class="MuiMobileStepper-dots css-1384nzf-MuiMobileStepper-dots"
      >
        <div
          class="MuiMobileStepper-dot MuiMobileStepper-dotActive css-26w9jf-MuiMobileStepper-dot"
        />
        <div
          class="MuiMobileStepper-dot css-114p2tk-MuiMobileStepper-dot"
        />
        <div
          class="MuiMobileStepper-dot css-114p2tk-MuiMobileStepper-dot"
        />
        <div
          class="MuiMobileStepper-dot css-114p2tk-MuiMobileStepper-dot"
        />
      </div>
      <button
        class="root StyledButton-sc-1apep4b-0 bXswYh MuiButton-root text MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root  css-1e6y48t-MuiButtonBase-root-MuiButton-root"
        data-testid="next-btn"
        tabindex="0"
        type="button"
      >
        <div
          style="visibility: visible;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ArrowForwardIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
            />
          </svg>
        </div>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <div
    class="swiper"
  >
    <div
      style="overflow-x: hidden; flex: 1; flex-direction: flex; height: 100%;"
    >
      <div
        class="react-swipeable-view-container"
        style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
      >
        <div
          aria-hidden="false"
          data-swipeable="true"
          style="width: 100%; flex-shrink: 0; overflow: auto;"
        >
          <div>
            <img
              alt="San Francisco – Oakland Bay Bridge, United States"
              class="MuiBox-root css-ijk13v"
              src="https://images.unsplash.com/photo-1537944434965-cf4679d1a598?auto=format&fit=crop&w=400&h=250&q=60"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiMobileStepper-root MuiMobileStepper-positionStatic css-rh92k-MuiPaper-root-MuiMobileStepper-root"
    >
      <button
        class="root StyledButton-sc-1apep4b-0 bXswYh MuiButton-root text MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root Mui-disabled  css-1e6y48t-MuiButtonBase-root-MuiButton-root"
        data-testid="back-btn"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          style="visibility: visible;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ArrowBackIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
            />
          </svg>
        </div>
      </button>
      <div
        class="MuiMobileStepper-dots css-1384nzf-MuiMobileStepper-dots"
      >
        <div
          class="MuiMobileStepper-dot MuiMobileStepper-dotActive css-26w9jf-MuiMobileStepper-dot"
        />
        <div
          class="MuiMobileStepper-dot css-114p2tk-MuiMobileStepper-dot"
        />
        <div
          class="MuiMobileStepper-dot css-114p2tk-MuiMobileStepper-dot"
        />
        <div
          class="MuiMobileStepper-dot css-114p2tk-MuiMobileStepper-dot"
        />
      </div>
      <button
        class="root StyledButton-sc-1apep4b-0 bXswYh MuiButton-root text MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root  css-1e6y48t-MuiButtonBase-root-MuiButton-root"
        data-testid="next-btn"
        tabindex="0"
        type="button"
      >
        <div
          style="visibility: visible;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ArrowForwardIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
            />
          </svg>
        </div>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <div
    class="root MuiFormControl-root styledComponents__FormControl-lwe1h6-0 jHalSF css-1nrlq1o-MuiFormControl-root"
  >
    <div
      class="MuiFormControl-root MuiTextField-root css-1vly5ry-MuiFormControl-root-MuiTextField-root"
    >
      <label
        class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard MuiFormLabel-root MuiFormLabel-colorPrimary css-1c2i806-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink="true"
        for="mui-2"
        id="mui-2-label"
      >
        Label
      </label>
      <div
        class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1480iag-MuiInputBase-root-MuiInput-root"
      >
        <input
          aria-invalid="false"
          autocomplete=""
          class="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
          id="mui-2"
          name="firstName"
          placeholder="placeholder"
          type="text"
          value=""
        />
      </div>
    </div>
    <p
      class="root MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained styledComponents__FormHelperText-lwe1h6-1 jsmHnI css-1wc848c-MuiFormHelperText-root"
    >
      helper text
    </p>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-1yr3319-MuiPaper-root-MuiAccordion-root"
  >
    <div
      aria-expanded="false"
      class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-2k2ln8-MuiButtonBase-root-MuiAccordionSummary-root"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
      >
        <div
          class="sc-bwzfXH ljbQTv"
        >
          <div
            class="card-header-wrapper"
          >
            <div>
              <div
                class="card-header-image"
              >
                <img
                  alt="Al Manara Pharmacy"
                  src="IMAGE_MOCK"
                />
              </div>
              <div
                class="card-header-body"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 card-header-title css-11estw0-MuiTypography-root"
                >
                  Al Manara Pharmacy
                </h5>
                <div
                  class="textWithIcon card-header-subTitle"
                >
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1393mlh-MuiTypography-root"
                  >
                    Al Sufouh
                  </span>
                </div>
                <div
                  class="textWithIcon card-header-description"
                >
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1393mlh-MuiTypography-root"
                  >
                    Open until 22:00
                  </span>
                </div>
                <div
                  class="textWithIcon card-header-subDescription"
                >
                  <img
                    alt="20 min"
                    src="IMAGE_MOCK"
                  />
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1393mlh-MuiTypography-root"
                  >
                    20 min
                  </span>
                </div>
              </div>
            </div>
            <div
              class="textWithIcon card-header-footer"
            >
              <img
                alt="All meds covered"
                src="IMAGE_MOCK"
              />
              <span
                class="MuiTypography-root MuiTypography-caption css-1393mlh-MuiTypography-root"
              >
                All meds covered
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
        >
          <div
            class="MuiAccordion-region"
            role="region"
          >
            <div
              class="MuiAccordionDetails-root sc-htpNat hajAhj css-15v22id-MuiAccordionDetails-root"
            >
              <div
                class="textWithIcon undefined"
              >
                <img
                  alt="Hyrdoxyzine hydrochloride"
                  src="IMAGE_MOCK"
                />
                <span
                  class="MuiTypography-root MuiTypography-caption css-1393mlh-MuiTypography-root"
                >
                  Hyrdoxyzine hydrochloride
                </span>
                <span
                  class="MuiTypography-root MuiTypography-caption textWithIcon-sideText css-1393mlh-MuiTypography-root"
                >
                  AED 150.00
                </span>
              </div>
              <div
                class="textWithIcon undefined"
              >
                <img
                  alt="Glimepiride-rosiglitazone"
                  src="IMAGE_MOCK"
                />
                <span
                  class="MuiTypography-root MuiTypography-caption css-1393mlh-MuiTypography-root"
                >
                  Glimepiride-rosiglitazone
                </span>
                <span
                  class="MuiTypography-root MuiTypography-caption textWithIcon-sideText css-1393mlh-MuiTypography-root"
                >
                  AED 150.00
                </span>
              </div>
              <div
                class="textWithIcon undefined"
              >
                <img
                  alt="Novolin 70/30"
                  src="IMAGE_MOCK"
                />
                <span
                  class="MuiTypography-root MuiTypography-caption css-1393mlh-MuiTypography-root"
                >
                  Novolin 70/30
                </span>
                <span
                  class="MuiTypography-root MuiTypography-caption textWithIcon-sideText css-1393mlh-MuiTypography-root"
                >
                  AED 150.00
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth css-fwdjlz-MuiDivider-root"
  />
  <div
    class="styledComponents__Container-d2us26-1 cpOZRs"
  />
  <div
    class="card-footer sc-bxivhb ERdXn"
  >
    <div
      class="textWithIcon card-footer-title"
    >
      <span
        class="MuiTypography-root MuiTypography-caption css-1393mlh-MuiTypography-root"
      >
        Your est. co-payment*
      </span>
      <span
        class="MuiTypography-root MuiTypography-caption textWithIcon-sideText css-1393mlh-MuiTypography-root"
      >
        AED 50.00
      </span>
    </div>
    <span
      class="MuiTypography-root MuiTypography-caption card-footer-subtitle css-1393mlh-MuiTypography-root"
    >
      *Final amounts subject to insurance coverage
    </span>
  </div>
  <div
    class="StyledListItem-sc-17740x3-0 iGDsMW"
  >
    <div
      class="text-list-item-wrapper"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 text-list-item-left css-11estw0-MuiTypography-root"
      >
        Flat / Villa No.
      </h5>
      <div
        class="MuiFormControl-root MuiTextField-root list-item-input css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
      >
        <div
          class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1480iag-MuiInputBase-root-MuiInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
            id="mui-3"
            placeholder="Required"
            type="text"
            value=""
          />
        </div>
      </div>
      <img
        alt="Required"
        src="IMAGE_MOCK"
      />
    </div>
  </div>
  <div>
    <div
      class="StyledImageCardWithCta__ImageCardWithCtaWrapper-sc-1ntrkoy-0 jcDmhc"
    >
      <img
        alt="We Work offices"
        class="image-card-icon"
      />
      <div
        class="image-card-content"
      >
        <h5
          class="MuiTypography-root MuiTypography-h5 image-card-title css-11estw0-MuiTypography-root"
        >
          We Work offices
        </h5>
        <span
          class="MuiTypography-root MuiTypography-caption image-card-subTitle css-1393mlh-MuiTypography-root"
        >
          The Offices 4, Albatha Next, 8th floor...
        </span>
      </div>
      <button
        class="image-card-button"
        type="button"
      >
        <img
          alt="We Work offices"
          src="IMAGE_MOCK"
        />
      </button>
    </div>
  </div>
  <div>
    <div
      class="StyledMedicineCard__MedicineCardWrapper-uao9hg-0 fSlAJl"
    >
      <div
        class="medicine-card-header"
      >
        <img
          alt="Hydroxyzine "
          src="IMAGE_MOCK"
        />
        <div
          class="medicine-card-details-wrapper"
        >
          <div
            class="medicine-card-header-details"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 card-header-title css-1reifv3-MuiTypography-root"
            >
              Hydroxyzine 
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 card-header-subTitle css-1reifv3-MuiTypography-root"
            >
              Hydroxyzine 
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 card-header-description css-1reifv3-MuiTypography-root"
            >
              3 times a day, for 5 days 
            </p>
          </div>
        </div>
      </div>
      <div
        class="medicine-card-body"
      >
        <p>
          Doctors Notes: &lt;br&gt; Take 3 times a day, after food.
        </p>
      </div>
    </div>
  </div>
  <div
    style="height: 100vh; width: 100vw;"
  >
    <div
      class="h-full pb-20"
    >
      <div
        style="height: 100%; width: 100%;"
      />
    </div>
  </div>
  <br />
</div>
`;
